Add Instrutor User CRUD in Admin Panel

--- a/public/assets/instructor_adminPages/instructor_update.scss
+++ b/public/assets/instructor_adminPages/instructor_update.scss
@@ -6,7 +6,6 @@ $breakpoints: (
   "desktop-large": 1200px,
 );
 
-.section_head,
 .formation_headwrapper,
 .formation_pagetitle,
 .searchbar,
@@ -17,12 +16,16 @@ $breakpoints: (
 .formation_title,
 .instructor_imgbox,
 .instructor_img,
-.instructor_buttons,
-._button {
+.instructor_choiceInput,
+.instructor_updateform,
+.delete_button,
+.preview_button,
+.intructor_input,
+.preview_button,
+.preview_box {
   display: flex;
 }
 
-.section_head,
 .formation_headwrapper,
 .section_main,
 .formation_globalwrapper,
@@ -34,7 +37,10 @@ $breakpoints: (
   flex-direction: row-reverse;
 }
 
-.section_head,
+.instructor_updateform {
+  flex-direction: row;
+}
+
 .formation_headwrapper,
 .formation_pagetitle,
 .searchbar,
@@ -43,8 +49,13 @@ $breakpoints: (
 .formation_globalwrapper,
 .formation_container,
 .instructor_img,
-.instructor_buttons,
-._button {
+.instructor_choiceInput,
+.instructor_updateform,
+.delete_button,
+.preview_button,
+.intructor_input,
+.preview_button,
+.preview_box {
   align-items: center;
 }
 
@@ -57,77 +68,34 @@ $breakpoints: (
 .button_search,
 .instructor_imgbox,
 .instructor_img,
-.instructor_buttons,
-._button {
+.instructor_choiceInput,
+.instructor_updateform,
+.delete_button,
+.preview_button,
+.intructor_input,
+.preview_button,
+.preview_box {
   justify-content: center;
 }
 
-.section_head,
-.section_main,
-.formation_pagetitle,
-.searchbar,
-.section_main,
-.formation_container {
-  width: 100%;
+.instructor_choiceInput {
+  justify-content: flex-end;
 }
 
-.formation_headwrapper,
+.preview_box {
+  align-items: flex-start;
+}
+
 .formation_globalwrapper {
   width: 90%;
 }
 
-/* ----- SECTION HEAD ----- */
-
-.section_head {
-  height: 200px;
-  margin-top: 100px;
-  padding-top: 40px;
-  margin-bottom: 100px;
-  background: url("../storage/image/planet.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-
-  .formation_headwrapper {
-    margin-top: 50px;
-  }
-
-  .formation_pagetitle {
-    padding-bottom: 100px;
-  }
-
-  .searchbar {
-    margin-top: 30px;
-  }
-
-  .input_searchtext {
-    width: 70%;
-    padding: 7px 10px 7px 10px;
-    border-radius: 50px;
-  }
-
-  .button_search {
-    height: 40px;
-    width: 40px;
-    margin-left: 5px;
-    border-radius: 50%;
-  }
-
-  .search_icon {
-    height: 30px;
-    width: 30px;
-  }
-}
-
-/* ----- end SECTION HEAD ----- */
-
 /* ----- SECTION MAIN ----- */
 
 .section_main {
-  margin-bottom: 50px;
-}
+  margin-top: 200px;
+  margin-bottom: 150px;
 
-.section_main {
   .formation_globalwrapper {
     position: relative;
     transition: 0.3s ease;
@@ -166,35 +134,101 @@ $breakpoints: (
     width: 80px;
     height: 100px;
     margin-top: 20px;
+    margin-bottom: 20px;
     margin-left: 10px;
     border: 1px solid;
     text-align: center;
   }
 
-  .instructor_buttons {
+  .instructor_choiceInput {
     position: absolute;
-    right: 5px;
-    bottom: 5px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    padding: 3px 0 3px 0;
   }
 
-  ._button {
+  .instructor_updateform {
+    margin: 0 13px 0 5px;
+    font-size: 15px;
+    font-weight: bold;
+  }
+
+  .updateFrom_h4 {
+    margin-right: 10px;
+  }
+
+  .intructor_input {
+    margin-left: 10px;
+    padding: 15px;
+    width: 100px;
+    height: 40px;
+  }
+
+  .instructor_button-roles {
+    margin-left: 10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+  }
+
+  .delete_button,
+  .preview_button {
     border: 1px solid;
     transition: 0.3s ease;
   }
 
-  ._button:hover {
+  .delete_button:hover,
+  .preview_button:hover {
     transform: scale(1.1);
   }
 
-  ._button img,
-  img {
+  .delete_button img,
+  .preview_button img {
     width: 25px;
     height: 25px;
   }
 
-  ._button {
+  .delete_button {
     width: 40px;
     height: 30px;
+  }
+
+  .delete_button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 40px;
+    height: 30px;
+  }
+
+  .preview_button {
+    position: absolute;
+    top: 95px;
+    right: 5px;
+    width: 42px;
+    height: 32px;
+  }
+
+  .preview-box {
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: 95%;
+    padding: 8px;
+    box-shadow: 1px 1px 6px #000;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  .preview_p {
+    display: block;
+    padding: 20px;
+    z-index: 2;
+  }
+
+  .showPreview {
+    display: block;
   }
 }
 
@@ -208,11 +242,10 @@ $breakpoints: (
   }
 }
 
-.section_head,
 .section_main {
   @include media-min(("phone")) {
     .formation_container {
-      height: 150px;
+      height: 200px;
     }
 
     .formation_title {
@@ -237,23 +270,22 @@ $breakpoints: (
       width: 110px;
       height: 130px;
       margin-left: 5px;
+      margin-bottom: 30px;
       margin-top: 0;
     }
-  }
-}
 
-.section_head {
-  @include media-min(("tablet")) {
-    margin-top: 120px;
-  }
-}
+    .instructor_button-roles {
+      margin-right: 3px;
+    }
 
-.section_head {
-  @include media-min(("tablet-large")) {
-    margin-top: 170px;
+    .delete_button {
+      top: 10px;
+      right: 10px;
+    }
 
-    .searchbar {
-      width: 40%;
+    .preview_button {
+      top: 120px;
+      right: 10px;
     }
   }
 }
@@ -268,6 +300,8 @@ $breakpoints: (
 
 .section_main {
   @include media-min(("tablet-large")) {
+    margin-top: 300px;
+
     .formation_globalwrapper {
       width: 80%;
     }
@@ -275,11 +309,6 @@ $breakpoints: (
     .instructor_imgbox {
       position: absolute;
       left: 0;
-    }
-
-    .instructor_buttons {
-      right: 10px;
-      bottom: 10px;
     }
   }
 }
