uninstall Vichuploader bundle

--- a/templates/admin/instructors_admin.html.twig
+++ b/templates/admin/instructors_admin.html.twig
@@ -41,7 +41,7 @@
                                 <h3 class="formation_h3 key_ftdw font-f1">{{instructor.name}} {{instructor.surname}}</h3>
                             </div>
                             <div class="instructor_imgbox">
-                                <img class="instructor_img" src="{{ vich_uploader_asset(instructor, 'imageFile') }}" alt="photo de l'instructeur">
+                                <img class="instructor_img" src="" alt="">
                             </div>
                             <div class="instructor_buttons">
                                 <a class="_button key_bg3" 
