--- a/templates/base/_header.html.twig
+++ b/templates/base/_header.html.twig
@@ -36,11 +36,11 @@
                 <a class="nav_a key_ftdw" href="{{path('logout')}}">Déconnexion</a>              
             </li>
         {% elseif is_granted('ROLE_INSTRUCTOR') %}
-             <li class="hd-li left font-f1">
+            <li class="hd-li left font-f1">
             <a class="key_ftdw" href="{{path('instructor_home')}}">Accueil</a>             
             </li>
             <li class="hd-li right font-f1">
-                <a class="key_ftdw" href="{{path('instructor_formations')}}">Formations</a>
+                <a class="key_ftdw" href="{{path('instructor_formations_index')}}">Formations</a>
             </li>
             <li class="hd-li left font-f1">
                 <a class="key_ftdw" href="{{path('formation_new')}}">Formation</a>             
