--- a/templates/instructor/formation_instructor.html.twig
+++ b/templates/instructor/formation_instructor.html.twig
@@ -13,7 +13,7 @@
     <section class="formation_section">
         <div class="formation_headsection">
             <div class="formation_headOne">
-                <h2 class="formation_title key_ftdw font-f1">{{ formation.title }}</h2>
+                <h2 class="formation_title key_ftdw font-f1">Titre de la formation</h2>
                 <img class="formation_sectionImg" 
                     src="{{ asset('assets/storage/image/astro-outer-space.png') }}" 
                     alt="space"
@@ -34,7 +34,7 @@
                     </div>
                     <div class="span_authorbox">
                         <span class="font-f3">Auteur: quelqu'un d'autre</span>
-                        <span class="span_author font-f3">Date: {{ formation.publishedAt }}</span>
+                        <span class="span_author font-f3">Date: </span>
                     </div>
                 </div>
                 <article class="lesson_article key_bg2">
