--- a/templates/instructor/home_instructor.html.twig
+++ b/templates/instructor/home_instructor.html.twig
@@ -25,7 +25,7 @@
                     </div>
                 <div class="home_box">
                     <ul class="home_ul">
-                        <li><a class="home_a key_bgwd key_ftdw font-f2" href="{{path('instructor_formations')}}">Vos Formations</a></li>
+                        <li><a class="home_a key_bgwd key_ftdw font-f2" href="{{path('instructor_formations_index')}}">Vos Formations</a></li>
                         <li><a class="home_a key_bgwd key_ftdw font-f2" href="{{path('formation_new')}}">Créer une formation</a></li>
                         <li><a class="home_a1 a2 key_bgwd key_ftdw font-f2" href="{{path('home')}}">Se déconnecter</a></li>
                     </ul>
