--- a/templates/instructor/instructorSearch_formations.html.twig
+++ b/templates/instructor/instructorSearch_formations.html.twig
@@ -32,7 +32,7 @@
         </div>
     </section>
     <section class="section_main">
-        {% for formation in formationsIndex %}
+         {% for formation in searchInstructorFormations %}
             <div class="formation_globalwrapper">
                 <div class="formation_container key_bg2">
                     <div class="formation_title">
