--- a/public/assets/instructor_adminPages/sections.scss
+++ b/public/assets/instructor_adminPages/sections.scss
@@ -6,20 +6,19 @@ $breakpoints: (
   "desktop-large": 1200px,
 );
 
-.formation_section,
-.formation_headsection,
-.formation_headOne,
+.section_section,
+.section_headsection,
+.section_headOne,
 .head_image,
-.section_mainFormation,
+.section_mainsection,
 .sections_side,
-.formation_wrapper,
-.formationForm,
-.formationForm div,
+.section_wrapper,
+.sectionForm,
+.sectionForm div,
 .form_wrap,
 .form_wrap div,
 .panel_section,
 .panel_sectionWrap,
-.a_btn,
 .lesson_panel,
 .panel_lessonWrap,
 .lesson_wrap,
@@ -27,14 +26,14 @@ $breakpoints: (
   display: flex;
 }
 
-.formation_section,
-.formation_headsection,
-.formation_headOne,
-.section_mainFormation,
+.section_section,
+.section_headsection,
+.section_headOne,
+.section_mainsection,
 .sections_side,
-.formation_wrapper,
-.formationForm,
-.formationForm div,
+.section_wrapper,
+.sectionForm,
+.sectionForm div,
 .form_wrap,
 .panel_section,
 .panel_sectionWrap,
@@ -43,35 +42,33 @@ $breakpoints: (
   flex-direction: column;
 }
 
-.formation_section,
-.formation_headsection,
-.formation_headOne,
+.section_section,
+.section_headsection,
+.section_headOne,
 .head_image,
-.section_mainFormation,
+.section_mainsection,
 .sections_side,
-.formation_wrapper,
-.formationForm,
+.section_wrapper,
+.sectionForm,
 .form_wrap,
 .panel_section,
 .panel_sectionWrap,
-.a_btn,
 .lesson_panel,
 .panel_lessonWrap {
   justify-content: center;
 }
 
-.formation_section,
-.formation_headsection,
-.formation_headOne,
+.section_section,
+.section_headsection,
+.section_headOne,
 .head_image,
-.section_mainFormation,
+.section_mainsection,
 .sections_side,
-.formation_wrapper,
-.formationForm,
+.section_wrapper,
+.sectionForm,
 .form_wrap,
 .panel_section,
 .panel_sectionWrap,
-.a_btn,
 .lesson_panel,
 .panel_lessonWrap {
   align-items: center;
@@ -82,37 +79,37 @@ $breakpoints: (
   align-items: flex-start;
 }
 
-.formation_section,
-.formation_headOne,
-.section_mainFormation,
-.formation_wrapper,
+.section_section,
+.section_headOne,
+.section_mainsection,
+.section_wrapper,
 .panel_section,
 .panel_sectionWrap,
-.formationForm div {
+.sectionForm div {
   width: 100%;
 }
 
-.formation_section {
+.section_section {
   margin-top: 120px;
 }
 
-.formation_headsection,
+.section_headsection,
 .sections_side,
-.formationForm {
+.sectionForm {
   width: 95%;
 }
 
 /* ------- SECTION HEAD ------ */
 
-.formation_headsection {
+.section_headsection {
   margin-bottom: 20px;
 }
 
-.formation_headOne {
+.section_headOne {
   text-align: center;
   padding: 20px;
 
-  .formation_title {
+  .section_title {
     margin-bottom: 20px;
     font-size: 30px;
   }
@@ -123,7 +120,7 @@ $breakpoints: (
   height: 200px;
 }
 
-.formation_sectionImg {
+.section_sectionImg {
   width: 100%;
   height: 100%;
 }
@@ -132,14 +129,14 @@ $breakpoints: (
 
 /* ------- SECTION MAIN ------ */
 
-.section_mainFormation {
+.section_mainsection {
   padding: 20px 0 20px 0;
 
   .sections_side {
     padding: 20px 0 20px 0;
   }
 
-  .formation_wrapper {
+  .section_wrapper {
     padding: 20px 0 20px 0;
   }
 
@@ -165,7 +162,7 @@ $breakpoints: (
     width: 150px;
   }
 
-  .formation_button {
+  .section_button {
     width: 200px;
     height: 50px;
     margin-top: 40px;
@@ -190,14 +187,10 @@ $breakpoints: (
 
   .panel_footer,
   .panel_lessonFooter {
-    position: relative;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-  }
-
-  .panel_body {
-    position: relative;
   }
 
   .panel_lessonHead,
@@ -243,39 +236,6 @@ $breakpoints: (
   .btnRemoveSection {
     margin-left: 20px;
     margin-right: 20px;
-  }
-
-  .a_btn {
-    position: absolute;
-    width: 160px;
-    height: 30px;
-  }
-
-  .a_btn {
-    width: 40px;
-    height: 30px;
-    border: 1px solid;
-    transition: 0.3s ease;
-  }
-
-  .a_btn:hover {
-    transform: scale(1.1);
-    z-index: 1;
-  }
-
-  .a_btn img {
-    width: 25px;
-    height: 25px;
-  }
-
-  .btnUpdate {
-    right: 10px;
-    bottom: 10px;
-  }
-
-  .btnDelete {
-    left: 10px;
-    bottom: 10px;
   }
 }
 
@@ -330,11 +290,11 @@ $breakpoints: (
   }
 }
 
-.formation_section {
+.section_section {
   @include media-min(("phone")) {
     margin-top: 150px;
 
-    .formation_title {
+    .section_title {
       font-size: 40px;
     }
 
@@ -345,9 +305,9 @@ $breakpoints: (
   }
 }
 
-.formation_section {
+.section_section {
   @include media-min(("tablet")) {
-    .formation_title {
+    .section_title {
       font-size: 45px;
     }
 
@@ -358,11 +318,11 @@ $breakpoints: (
   }
 }
 
-.formation_section {
+.section_section {
   @include media-min(("tablet-large")) {
     margin-top: 200px;
 
-    .formation_title {
+    .section_title {
       font-size: 50px;
     }
 
@@ -373,7 +333,7 @@ $breakpoints: (
   }
 }
 
-.section_mainFormation {
+.section_mainsection {
   @include media-min(("desktop")) {
     .sections_side {
       width: 1000px;
