--- a/templates/base/formations.html.twig
+++ b/templates/base/formations.html.twig
@@ -24,55 +24,33 @@
                         title="Icon by MD Badsha Meah : https://freeicons.io/profile/3335">
                 </button>
             </form>
-            {# <h3>Résultats pour : {{ search }}</h3> #}
         </div>
     </section>
     <section class="section_main">
-    {% for formation in formations %}
-        {% if formation.isPublished %}
-            <div class="formation_globalwrapper">
-                <div class="formation_container key_bg2">
-                    <div class="formation_title">
-                        <h3 class="formation_h3 key_ftdw font-f1"></h3>
-                        <p class="key_ftdw font-f2"></p>
+        {% for formation in formations %}
+            {% if formation.isPublished %}
+                <div class="formation_globalwrapper">
+                    <div class="formation_container key_bg2">
+                        <div class="formation_title">
+                            <h3 class="formation_h3 key_ftdw font-f1">{{ formation.title }}</h3>
+                            <p class="key_ftdw font-f2">{{ formation.sentence }}</p>
+                        </div>
+                        <div class="instructor_imgbox">
+                            <img class="instructor_img" src="" alt="photo de l'auteur de la formation">
+                        </div>
                     </div>
-                    <div class="instructor_imgbox">
-                        <img class="instructor_img" src="" alt="photo de l'auteur de la formation">
+                    <button class="preview_button" 
+                            id="preview-btn" 
+                            onclick="dropdown(this)"
+                            style="background-color: #57cc99">
+                        <h4 class="preview_h4 key_ftdw font-f2">Aperçu</h4>
+                    </button>
+                    <div class="preview-box key_bg1" id="preview_dropdown">
+                        <p class="preview_p key_ftdw font-f3">{{ formation.description }}</p>
                     </div>
-                </div>
-                <button class="preview_button" 
-                        id="preview-btn" 
-                        onclick="dropdown(this)"
-                        style="background-color: #57cc99">
-                    <h4 class="preview_h4 key_ftdw font-f2">Aperçu</h4>
-                </button>
-                <div class="preview-box key_bg1" id="preview_dropdown">
-                    <p class="preview_p key_ftdw font-f3"></p>
-                </div>
-            </div>    
-        {% endif %}
-	{% endfor %}    
-
-        <div class="formation_globalwrapper">
-            <div class="formation_container key_bg2">
-                <div class="formation_title">
-                    <h3 class="formation_h3 key_ftdw font-f1"></h3>
-                    <p class="key_ftdw font-f2"></p>
-                </div>
-                <div class="instructor_imgbox">
-                    <img class="instructor_img" src="" alt="photo de l'auteur de la formation">
-                </div>
-            </div>
-            <button class="preview_button" 
-                    id="preview-btn" 
-                    onclick="dropdown(this)"
-                    style="background-color: #57cc99">
-                <h4 class="preview_h4 key_ftdw font-f2">Aperçu</h4>
-            </button>
-            <div class="preview-box key_bg1" id="preview_dropdown">
-                <p class="preview_p key_ftdw font-f3"></p>
-            </div>
-        </div>  
+                </div>    
+            {% endif %}
+        {% endfor %}    
     </section>
 {% endblock %} 
 
